memory-utilize-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memory-utilize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memory-utilize
  template:
    metadata:
      labels:
        app: memory-utilize
        test: heapdump
    spec:
      containers:
        - name: memory-utilize
          image: tstuehler/memoryutilize
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: heap-dumps
              mountPath: /dumps
          startupProbe:
            httpGet:
              path: /memory-utilize
              port: 8080
            failureThreshold: 12
            periodSeconds: 5          
          livenessProbe:
            httpGet:
              path: /memory-utilize/MemoryUtilizeServlet?size=32&num=1&lifespan=1
              port: 8080
            initialDelaySeconds: 15
            failureThreshold: 1
            periodSeconds: 3
        - name: ship-heap-dump
          image: tstuehler/s3dumpshipper
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: heap-dumps
              mountPath: /dumps
      volumes:
        - name: heap-dumps
          emptyDir:
            sizeLimit: 2Gi
