memory-utilize-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory-utilize-service
spec:
  selector:
    app: memory-utilize
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
