memory-utilize-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: memory-utilize-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /memory-utilize(/|$)(.*)
        backend:
          serviceName: memory-utilize-service
          servicePort: 80
